--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@cllaude99_lib/eslint-config",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
