--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,40 @@
-.DS_Store
+# Dependencies
 node_modules
-.turbo
-*.log
+.pnpm-store/
+
+# Build outputs
 dist
 dist-ssr
-*.local
+build
+.turbo
+
+# IDE and editor files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Local env files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Cache and temporary files
 .cache
-server/dist
-public/dist
+.temp
+.DS_Store
+*.local
+
+
