--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@cllaude99_lib/ui": "workspace:*",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
