--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0"
   }
 }
