--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.3",
+    "the-new-css-reset": "^1.11.3"
   },
   "devDependencies": {
     "@cllaude99_lib/eslint-config": "workspace:*",
